# Scriptorium

./: .gitignore  README.md
violet-refine/: README.md  SKILL.md  pyproject.toml
violet-refine/references/: anti-ai-rules.zh.md
violet-refine/references/prompts/: direct.md  modes.md  review.md
violet-refine/scripts/: violet-refine
violet-refine/src/violet_refine/: __main__.py  auth.py  cli.py  config.py  diffing.py  llm.py  prompts.py  review.py  setup_page.py
violet-refine/src/violet_refine/setup_assets/: page.html
violet-refine/src/violet_refine/setup_assets/fonts/: OFL-NOTICE.txt
