[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "violet-refine"
version = "2.0.0"
description = "Chinese writing refinement kernel for agent workflows"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "keyring>=25.0.0",
]

[project.scripts]
violet-refine = "violet_refine.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/violet_refine"]

[tool.hatch.build.targets.wheel.force-include]
"references" = "violet_refine/_references"
